2013-07-24  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb, test/test_package_type.rb:
	    Add OCI8::Metadata::Type#package_name and
	    OCI8::Metadata::ArgBase#has_default?.

2013-07-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c, lib/oci8.rb.in, lib/oci8/metadata.rb: Add
	    OCI8::Metadata::Package:types to support package type
	    description. It is a new feature of Oracle 12c.
	* test/setup_test_package.sql, test/test_all.rb,
	  test/test_package_type.rb: Add tests for package type description.

2013-07-15  KUBO Takehiro  <kubo@jiubao.org>
	* test/*.rb: Use MiniTest instead of Test::Unit.

2013-06-23  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/cursor.rb, lib/oci8/object.rb: fix to bind object types by
	    name as OCI8::Cursor#bind_param(pos, val, :named_type, typename).
	* test/test_object.rb: fix to test OCI8::Cursor#bind_param(pos, val,
	    :named_type, typename).

2013-06-23  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: OCI8#describe_synonym and OCI8#describe_any
	    accept 'PUBLIC.XXX' as a public synonym name.
	* test/test_metadata.rb: add tests for OCI8#describe_synonym.

2013-06-11  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: fix ruby version checking in binary gem.
	    Gem::ruby_version of ruby 2.0.0p195 is 2.0.0.195, which
	    doesn't match '= 2.0.0'.
	    (github issue #36 reported by sodonnel)

2013-03-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: fix potential SEGV when one connection
	    is used by more than two threads and temporary lobs are
	    freed by GC.

2013-03-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/stmt.c: call OCIStmtPrepare2()
	    without GVL to prevent OCI8#parse from blocking ruby itself
	    while the connection is used by another thread even though
	    non-blocking mode is set.

2013-03-09  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: revert the previous commit because old
	    rubygems doesn't support: