@@ -1,3 +1,8 @@
+2013-07-30  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/metadata.c, ext/oci8/ocihandle.c, test/test_metadata.rb:
+	    Fix segmentation fault when metadata are accessed after the
+	    session is disconnected.
+
 2013-07-24  KUBO Takehiro  <kubo@jiubao.org>
 	* lib/oci8/metadata.rb, test/test_package_type.rb:
 	    Add OCI8::Metadata::Type#package_name and
